[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/Mario1.tres" type="Texture" id=1]
[ext_resource path="res://assets/Mario2.tres" type="Texture" id=2]
[ext_resource path="res://assets/MarioFall.tres" type="Texture" id=3]
[ext_resource path="res://assets/MarioFlying.tres" type="Texture" id=4]
[ext_resource path="res://assets/Mario3.tres" type="Texture" id=5]
[ext_resource path="res://assets/MarioDead.tres" type="Texture" id=6]
[ext_resource path="res://assets/audio/die.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/scripts/mario.gd" type="Script" id=8]
[ext_resource path="res://assets/audio/fly.wav" type="AudioStream" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "died",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 2 ) ],
"loop": true,
"name": "run",
"speed": 12.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "fly",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 24.4949

[node name="mario" type="RigidBody2D"]
position = Vector2( -1, 0 )
gravity_scale = 10.0
script = ExtResource( 8 )

[node name="anim" type="AnimatedSprite" parent="."]
position = Vector2( -2.3019, -9.75429 )
scale = Vector2( 1.9, 1.9 )
frames = SubResource( 1 )
animation = "fly"

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( 0.245983, 0.287323 )
shape = SubResource( 2 )

[node name="die_fx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="flap_fx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[connection signal="input_event" from="." to="." method="_on_mario_input_event"]
[connection signal="finished" from="die_fx" to="." method="_on_die_fx_finished"]
